--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_keyboard_visibility: ^5.0.2
   firebase_core: ^1.3.0
   firebase_auth: ^2.0.0
+  cloud_firestore: ^2.4.0
   google_sign_in: ^5.0.4
   provider: ^5.0.0
 
