--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   cloud_firestore: ^2.4.0
   google_sign_in: ^5.0.4
   provider: ^5.0.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
