--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   google_sign_in: ^5.0.4
   provider: ^5.0.0
   intl: ^0.17.0
+  rxdart: ^0.27.1
 
 dev_dependencies:
   flutter_test:
